Implemented DEFAULT methods